# advanced_cpp_programming_cookbook

./: README.md  notes.md
chapter01/: CMakeLists.txt  api.h  config.h  example03.cpp  my_library.h
chapter01/example04/: CMakeLists.txt  example04.cpp
chapter01/recipe04/: CMakeLists.txt
chapter01/recipe05/example01/: CMakeLists.txt  example01.cpp
chapter01/recipe05/example02/: CMakeLists.txt  example02.cpp
chapter02/recipe02/example01/: CMakeLists.txt  example01.cpp
chapter03/recipe01/example02/: CMakeLists.txt  main.cpp
